# fiberize

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  fibr.kdev4
benchmarks/: CMakeLists.txt
benchmarks/echo/: CMakeLists.txt  main.cpp
benchmarks/fps/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/calculator/: CMakeLists.txt  main.cpp
examples/helloworld/: CMakeLists.txt  main.cpp
examples/pingpong/: CMakeLists.txt  main.cpp
fiberize/: CMakeLists.txt  Doxyfile  LICENSE  README  fiberize.kdev4
fiberize/benchmarks/: CMakeLists.txt
fiberize/benchmarks/echo/: CMakeLists.txt  main.cpp
fiberize/benchmarks/fps/: CMakeLists.txt  main.cpp
fiberize/benchmarks/sleepers/: CMakeLists.txt  main.cpp
fiberize/cmake/Modules/: FindLibUV.cmake
fiberize/docs/: Doxyfile
fiberize/examples/calculator/: CMakeLists.txt  main.cpp
fiberize/examples/helloworld/: CMakeLists.txt  main.cpp
fiberize/examples/pingpong/: CMakeLists.txt  main.cpp
fiberize/include/fiberize/: builder-inl.hpp  builder.hpp  condition.hpp  context.hpp  event-inl.hpp  event.hpp  eventcontext.hpp  eventenv.hpp  eventimpl.hpp  events.hpp  exceptions.hpp  fiber.hpp  fibercontext.hpp  fiberize.hpp  fiberref-inl.hpp  fiberref.hpp  fibersystem.hpp  future.hpp  handler.hpp  locality.hpp  mailbox.hpp  mutex.hpp  path.hpp  promise.hpp  result.hpp  runnable.hpp  scheduler.hpp  scopedpin.hpp  spinlock.hpp  system.hpp  types.hpp
fiberize/include/fiberize/detail/: controlblock.hpp  controlblockptr.hpp  devnullfiberref.hpp  entitytraits.hpp  executor.hpp  fiberbase.hpp  fiberrefimpl.hpp  fiberscheduler.hpp  lazydeque.hpp  localfiberref.hpp  multitaskscheduler.hpp  osthreadscheduler.hpp  refrencecounted.hpp  runnable.hpp  runner.hpp  schedulertraits.hpp  singletaskscheduler.hpp  stackpool.hpp  task.hpp  tasktraits.hpp  threadscheduler.hpp  tuple.hpp
fiberize/include/fiberize/io/: buffer.hpp  file.hpp  filesystem.hpp  io.hpp  mode.hpp  sleep.hpp
fiberize/include/fiberize/io/detail/: iocontext.hpp  libuvwrapper.hpp
fiberize/include/moodycamel/: concurrentqueue.h
fiberize/src/fiberize/: condition.cpp  context.cpp  event.cpp  eventcontext.cpp  eventenv.cpp  events.cpp  exceptions.cpp  fiber.cpp  fibercontext.cpp  fiberref.cpp  fibersystem.cpp  mailbox.cpp  mutex.cpp  path.cpp  scheduler.cpp  scopedpin.cpp  spinlock.cpp  system.cpp
fiberize/src/fiberize/detail/: controlblockptr.cpp  devnullfiberref.cpp  executor.cpp  fiberscheduler.cpp  localfiberref.cpp  multitaskscheduler.cpp  osthreadscheduler.cpp  referencecounted.cpp  runner.cpp  schedulertraits.cpp  singletaskscheduler.cpp  stackpool.cpp  threadscheduler.cpp
fiberize/src/fiberize/io/: buffer.cpp  file.cpp  filesystem.cpp  mode.cpp  sleep.cpp
fiberize/src/fiberize/io/detail/: iocontext.cpp
fiberize/test/: CMakeLists.txt
fiberize/test/fibonacci/: CMakeLists.txt  main.cpp
fiberize/test/future/: CMakeLists.txt  main.cpp
fiberize/test/io/: CMakeLists.txt  main.cpp
fiberize/test/kill/: CMakeLists.txt  main.cpp
fiberize/test/pingpong/: CMakeLists.txt  main.cpp
fiberize/test/timers/: CMakeLists.txt  main.cpp
include/fiberize/: buffer.hpp  context.hpp  event.hpp  fiber.hpp  fiberize.hpp  fiberref.hpp  handler.hpp  mailbox.hpp  path.hpp  sendable.hpp  system.hpp  types.hpp
include/fiberize/detail/: controlblock.hpp  deadletterfiberref.hpp  executor.hpp  fiberbase.hpp  localfiberref.hpp  mailbox.hpp
src/fiberize/: context.cpp  fiber.cpp  fiberref.cpp  mailbox.cpp  path.cpp  system.cpp
src/fiberize/detail/: controlblock.cpp  deadletterfiberref.cpp  executor.cpp  localfiberref.cpp  mailbox.cpp
